package at.htl.skischool.entity;

public enum Class {

    ANFAENGER,
    KOENNER,
    PROFIS,
    UNBEKANNT

}
